--- a/FrontendCollaboration/WebContent/index.html
+++ b/FrontendCollaboration/WebContent/index.html
@@ -49,6 +49,7 @@
    <div class="collapse navbar-collapse" id="collapse-example">
   <ul class="nav navbar-nav">
   <li><a href="#/home"><span class="glyphicon glyphicon-home"></span> HOME</a></li>
+  
 
   </ul>
      
@@ -62,8 +63,8 @@
    <li><a href="#/login" ng-hide="currentUser.online"><span class="glyphicon glyphicon-log-in"></span>Login</a></li>
     <li><a href="#/editprofile" ng-hide="currentUser.online"><span class="glyphicon glyphicon-log-in"></span>Edit Profile</a></li>
      
-<!--     <li><a href="#" ng-show="currentUser.online" >Welcome {{currentUser.username}}</a></li>
-    <li><a href="" ng-click="logout()" ng-show="currentUser.online">Logout</a></li> -->
+    <li><a href="#"  >Welcome {{currentUser.username}}</a></li>
+    <li><a href="" ng-click="logout()" >Logout</a></li> 
    
   
  
