--- a/FrontendCollaboration/WebContent/index.html
+++ b/FrontendCollaboration/WebContent/index.html
@@ -65,6 +65,11 @@
     <li><a href="#/getblogs" >get All Blogs</a></li>
     </ul> </li>
   
+  <li class="dropdown"><a href="" class="dropdown-toggle" data-toggle="dropdown" >Job <b class="caret"></b></a>
+    <ul class="dropdown-menu">
+    <li><a href="#/addjob" >Add Job</a></li>
+ 
+    </ul> </li>
 
   </ul>
      
