add job is completed

--- a/FrontendCollaboration/WebContent/index.html
+++ b/FrontendCollaboration/WebContent/index.html
@@ -23,6 +23,8 @@
 <script src="controllers/blogpostcontroller.js"></script>
 <script src="services/blogpostService.js"></script>
 <script src="controllers/blogpostdetailcontroller.js"></script>
+<script src="controllers/jobcontroller.js"></script>
+<script src="services/jobservice.js"></script>
 
 </head>
 
@@ -71,6 +73,9 @@
     <li><a href="#/addjob" >Add Job</a></li>
  
     </ul> </li>
+
+
+<li><a href="#/demo" >Demo</a></li>
 
   </ul>
      
