--- a/FrontendCollaboration/WebContent/index.html
+++ b/FrontendCollaboration/WebContent/index.html
@@ -70,7 +70,8 @@
   
   <li class="dropdown"><a href="" class="dropdown-toggle" data-toggle="dropdown" >Job <b class="caret"></b></a>
     <ul class="dropdown-menu">
-    <li><a href="#/addjob" >Add Job</a></li>
+    <li><a href="#/addjob" ng-show="currentUser.role=='ADMIN' ">Add Job</a></li>
+    <li><a href="#/getalljobs" >get All Jobs</a></li>
  
     </ul> </li>
 
