--- a/FrontendCollaboration/WebContent/index.html
+++ b/FrontendCollaboration/WebContent/index.html
@@ -59,7 +59,13 @@
   
   <ul class="nav navbar-nav" >
   <li><a href="#/home"><span class="glyphicon glyphicon-home"></span> HOME</a></li>
-  <li><a href="#/editprofile" ng-show="currentUser.isOnline"><span class="glyphicon glyphicon-log-in"></span>Edit Profile</a></li>
+  <li><a href="#/editprofile" ng-show="currentUser.isOnline"><span class="glyphicon glyphicon-log-in"></span> Edit Profile</a></li>
+  
+  
+  <li><a href="#/uploadprofilepic"><img src="http://localhost:8084/RestController/getimage/{{currentUser.username}}" height="40px" width="40px" alt="upload profile pic">profilepic</a></li>
+   <li><a href="#/profileInfo">profileInfo</a></li>
+  
+  
   
     <li class="dropdown"><a href="" class="dropdown-toggle" data-toggle="dropdown" >Blog <b class="caret"></b></a>
     <ul class="dropdown-menu">
@@ -93,12 +99,12 @@
   
    
     
-    <li><a href="" ng-click="logout()" ng-show="currentUser.isOnline" >Logout</a></li> 
+<li><a href="" ng-click="logout()" ng-show="currentUser.isOnline" ><span class="glyphicon glyphicon-off"></span> Logout</a></li> 
    
-  
+
  
     
-  
+
 
    
     </ul></div>
