--- a/FrontendCollaboration/WebContent/index.html
+++ b/FrontendCollaboration/WebContent/index.html
@@ -59,16 +59,17 @@
    <div class="collapse navbar-collapse" id="collapse-example">
   
   <ul class="nav navbar-nav" >
-  <li><a href="#/home"><span class="glyphicon glyphicon-home"></span> HOME</a></li>
+  <li class="active"><a href="#/home"><span class="glyphicon glyphicon-home"></span> HOME</a></li>
   <li><a href="#/editprofile" ng-show="currentUser.isOnline"><span class="glyphicon glyphicon-log-in"></span> Edit Profile</a></li>
  
  
   
-  <li><a href="#/uploadprofilepic" >
+  <li><a href="#/uploadprofilepic" ng-show="currentUser.isOnline" >
   <img src="http://localhost:8084/RestController/getimage/{{currentUser.username}}" height="40px" width="40px" alt="upload profile pic" ng-show="currentUser.username">profilepic</a></li>
   
   
    <li><a href="#/profileInfo">profileInfo</a></li>
+    <li><a href="#/pro">pro</a></li>
   
   
   
