--- a/FrontendCollaboration/WebContent/index.html
+++ b/FrontendCollaboration/WebContent/index.html
@@ -27,6 +27,9 @@
 <script src="controllers/jobcontroller.js"></script>
 <script src="services/jobservice.js"></script>
 
+<script src="controllers/friendcontroller.js"></script>
+<script src="services/friendservice.js"></script>
+
 </head>
 
 
@@ -72,6 +75,11 @@
     <li><a href="#/pro">pro</a></li>
   
   
+   <li class="dropdown"><a href="" class="dropdown-toggle" data-toggle="dropdown" >Friend <b class="caret"></b></a>
+    <ul class="dropdown-menu">
+    <li><a href="#/getsuggestedusers" >List of Suggested users</a></li>
+   
+    </ul> </li>
   
     <li class="dropdown"><a href="" class="dropdown-toggle" data-toggle="dropdown" >Blog <b class="caret"></b></a>
     <ul class="dropdown-menu">
