friendRequest and Online friend status are completed

--- a/FrontendCollaboration/WebContent/index.html
+++ b/FrontendCollaboration/WebContent/index.html
@@ -68,7 +68,7 @@
  
   
   <li><a href="#/uploadprofilepic" ng-show="currentUser.isOnline" >
-  <img src="http://localhost:8084/RestController/getimage/{{currentUser.username}}" height="40px" width="40px" alt="upload profile pic" ng-show="currentUser.username">profilepic</a></li>
+  <img src="http://localhost:8084/RestController/getimage/{{currentUser.username}}" height="40px" width="40px" alt="upload profile pic" ng-show="currentUser.username"></a></li>
   
   
    <li><a href="#/profileInfo">profileInfo</a></li>
