pending friend request and update accept request are completed.....

--- a/FrontendCollaboration/WebContent/index.html
+++ b/FrontendCollaboration/WebContent/index.html
@@ -78,6 +78,8 @@
    <li class="dropdown"><a href="" class="dropdown-toggle" data-toggle="dropdown" >Friend <b class="caret"></b></a>
     <ul class="dropdown-menu">
     <li><a href="#/getsuggestedusers" >List of Suggested users</a></li>
+     <li><a href="#/pendingrequests" >Pending Friend Request</a></li>
+    
    
     </ul> </li>
   
