--- a/FrontendCollaboration/WebContent/index.html
+++ b/FrontendCollaboration/WebContent/index.html
@@ -30,6 +30,10 @@
 <script src="controllers/friendcontroller.js"></script>
 <script src="services/friendservice.js"></script>
 
+<script src="controllers/Chatcontroller.js"></script>
+<script src="services/ChatService.js"></script>
+
+
 </head>
 
 
@@ -73,6 +77,8 @@
   
    <li><a href="#/profileInfo">profileInfo</a></li>
     <li><a href="#/pro">pro</a></li>
+    
+    <li><a href="#/chat">Chat</a></li>
   
   
    <li class="dropdown"><a href="" class="dropdown-toggle" data-toggle="dropdown" >Friend <b class="caret"></b></a>
