--- a/FrontendCollaboration/WebContent/index.html
+++ b/FrontendCollaboration/WebContent/index.html
@@ -93,6 +93,26 @@
    
     </ul> </li>
   
+  
+   <li class="dropdown"><a href="" class="dropdown-toggle" data-toggle="dropdown" ng-show="currentUser.username" >
+   <span class="glyphicon glyphicon-globe" ng-click="updateLength()">
+   <span class="rw-number-notification" ng-if="approvalStatusLength>0">{{approvalStatusLength}}</span></span></a>
+    
+    <ul class="dropdown-menu">
+    <li ng-repeat="blogPost in blogApprovalStatus">
+    <a href="" ng-click="updateViewedStatus(blogPost)">BlogPost titled<b>"{{blogPost.blogTitle}}</b> is
+    <span ng-if="blogPost.approved">Approved</span>
+    <span ng-if="!blogPost.approved">
+    <div class="container">rejected for the reason {{blogPost.rejectionReason}}</div></span>
+    </a></li>
+   
+    </ul> </li>
+  
+  
+  
+  
+  
+  
     <li class="dropdown"><a href="" class="dropdown-toggle" data-toggle="dropdown" >Blog <b class="caret"></b></a>
     <ul class="dropdown-menu">
     <li><a href="#/addblogpost" >Add Blog Post</a></li>
