--- a/FrontendCollaboration/WebContent/index.html
+++ b/FrontendCollaboration/WebContent/index.html
@@ -87,8 +87,8 @@
   <img src="http://localhost:8084/RestController/getimage/{{currentUser.username}}" height="40px" width="40px" alt="upload profile pic" ng-show="currentUser.username"></a></li>
   
   
-   <li><a href="#/profileInfo">profileInfo</a></li>
-    <li><a href="#/pro">pro</a></li>
+   <!-- <li><a href="#/profileInfo">profileInfo</a></li>
+    <li><a href="#/pro">pro</a></li> -->
     
    <!--  <li><a href="#/chat">Chat</a></li> -->
   
@@ -142,8 +142,8 @@
     </ul> </li>
  <!-- --------------------------------------------------------------------------------------------------- -->
 
-<li><a href="#/demo" >Demo</a></li>
-
+<!-- <li><a href="#/demo" >Demo</a></li>
+ -->
   </ul>
      
  
