--- a/FrontendCollaboration/WebContent/index.html
+++ b/FrontendCollaboration/WebContent/index.html
@@ -74,7 +74,7 @@
   <li><a href="#/editprofile" ng-show="currentUser.isOnline"><span class="glyphicon glyphicon-log-in"></span> Edit Profile</a></li>
  
   <!-- --------------------------------------------------------------------------------------------------- -->
-      <li><a href="#/myprofile" >Profile</a></li>
+      <li><a href="#/myprofile" ng-show="currentUser.isOnline" >Profile</a></li>
   
  
   <!--    <li class="dropdown"><a href="" class="dropdown-toggle" data-toggle="dropdown" >Home news <b class="caret"></b></a>
@@ -94,7 +94,7 @@
   
    <!-- --------------------------------------------------------------------------------------------------- -->
   
-   <li class="dropdown"><a href="" class="dropdown-toggle" data-toggle="dropdown"   ng-show="currentUser.isOnline">Friend <b class="caret"></b></a>
+   <li class="dropdown"><a href=""  ng-hide="currentUser.role=='ADMIN'" class="dropdown-toggle" data-toggle="dropdown"   ng-show="currentUser.isOnline">Friend <b class="caret"></b></a>
     <ul class="dropdown-menu">
     <li><a href="#/getsuggestedusers" >List of Suggested users</a></li>
      <li><a href="#/pendingrequests" >Pending Friend Request</a></li>
